[package]
name = "todocli"
version = "0.1.0"
authors = ["janus@insignificancegalore.net"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies.config_struct]
version = "~0.3.0"
features = ["toml-parsing"]