[package]
name = "todocli"
version = "0.1.0"
authors = ["janus@insignificancegalore.net"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.4.0"
serde = {version = "1.0", features = ["derive"]}

[build-dependencies.config_struct]
version = "~0.3.0"
features = ["toml-parsing"]
